# hotPK

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  generateInput.py
python/: HfunctionGeneral.py  Hfunctions.py  Sfunctions.py  generate3DPoints.py  plotHfunction.py  plotHfunctionGeneral.py  plotReferenceKernel.py  plotSfunction.py  plotSolution.py  plotUfunction.py  plotVfunction.py  referenceKernel.py  requirements.txt  vtkGenerator.py
src/: AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  ElementIntegrals.cpp  ElementIntegrals.h  Engine.cpp  Engine.h  HFunctions.cpp  HFunctions.h  Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Parameters.h  Plasma.cpp  Plasma.h  Species.cpp  Species.h  Writers.cpp  Writers.h  main.cpp  physicsConstants.h
